--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon src/server.js"
   },
   "author": "Tony Soukkeo",
   "license": "ISC",
@@ -13,8 +13,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.2",
     "nodemon": "^2.0.2"
   }
 }
