--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
+    "nodemailer": "^6.4.4",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.2"
   }
 }
