--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "puppeteer": "^2.1.1",
+    "puppeteer-autoscroll-down": "^0.1.2"
   }
 }
